@@ -1,6 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX tempdir.patch 3694 SHA256 c3a19bfb3fdc12c416b6ef1ecd8ac9e3f28e85be906a90328acaf90614080f3d SHA512 e7d29e71afad11c79d508c35c9060a39308c78e654f00808cb38b7e75ebf5f885bbd436f58e9900977c2e81d0f4a7f543daeab6bd2f9a919c4c3b74dba33c325 WHIRLPOOL 19daca55d78d94321c5b5a8e46d075133a473a4a95affc6e55f9fdf253fc596e514be49d5840d08911416330b85070a4bc80d60fe6749ac5055b540bc6f260eb
 DIST chm2pdf-0.9.1.tar.gz 19955 SHA256 204293c264c94bd17f56925d21d20b9f69a96136836198ba1a5014fe128ec3b0 SHA512 1d1997b17750f371e60cc6bf9693a8e4316deadd63247700f6ebd1bf02340f2e0524766a6be846d0f6349416b8551609da63fbf60ecd62766cf0d9b4f0c886d3 WHIRLPOOL 15607e84628ea2395b0f55ce0e1c2ab8c41f087e348e453a39db101f21c7e32f533d1537ad79957cf02b4c91f8dc7bf1afa883bf083067f09bbfb0012a373943
 EBUILD chm2pdf-0.9.1-r1.ebuild 856 SHA256 7535b508856eeae498b2e2abd5e161ac40769f07dfc98b9f5df9661fb55362fc SHA512 0af2176250783b299a8f50b8a1c1243f47c3a551a15b7cbf2ba498e9e3279e1287ef23157f4a27ed5f148b77ecb5c2fca51858a7aba762110b038b309493fce3 WHIRLPOOL a2df8d0dfe70aede9ba4943df0c8dbf916a40b7c277242050729b79c779ead792b3bf259f65e8aa8f7e168c4d57ddfdd019204ccc046c15328843195bbbb3655
+EBUILD chm2pdf-0.9.1-r2.ebuild 884 SHA256 34caef1c4ff94965235b963c49d6da12fd4a905246f06a8119a865997a441f0e SHA512 f8c658d29d33438720fe0fcf030eafedb4d4c3a1500a58f7066ecffe68c17ec3ded05a03c0adc0f74531a3820152e507d5581e1b9a49aa726417e0fe91e3115d WHIRLPOOL ce65c5db973bcd8740a791d5d8f963203887a496b95a0e41802ee4a0146ef1499842833bed85ffaebef9322dcd10b3f6127980b35bdec43a8f1c0c26ac76d036
 EBUILD chm2pdf-0.9.1.ebuild 766 SHA256 b320795c8ca64b8d22b48b4f4d0315d8cc5ad16357fb67cbaf43cb97432da491 SHA512 64557b00811aca33477a61d0101de75868270b31b5194b388394fde4d0ae19d36056a60005da909dadab5dcce8941beb988766db4a481f59887706dfb976bfa4 WHIRLPOOL 6c1f1d3e76bd7043b0c8887730ec0e89267fe1644a1442fa3b035d4998564333670a30b720235d64a31785199c3c8ee8bb715c686d16424987fd7b923ecb6afa
-MISC ChangeLog 1969 SHA256 1378687c10231103c04c1369ecc91f94877614bd38a14a8b186e62c371784910 SHA512 ab33f4327fa2ac2545a813849e25765ce07e368b3f2722ee6757506380ae95a97e6afb5bd18b8488f6b0b056e1ebe350e4c6755d683ef8e290ef6ca1b8ade40c WHIRLPOOL 744d9e5fa83eedf37ebe7e6704c5448ee577c464e526fd9d13c1f998f142f01281de2a0d9d671d21b144eb9b2a55094952a54c3756459c2655742ccc418f9606
+MISC ChangeLog 2167 SHA256 c6eec0eb34c1a598b11c3714ff77037fad4cd2f453ff5cf64e1306aa25a44e60 SHA512 99c76719aa8882abbc1c983bb79ae146c2cc6b06d1e3da4d8d1f545c6b8486b12df0e0b4c964a89ce8387f8e28bec5ff5d7d03df189e1d8dc2a70660156e8b7a WHIRLPOOL ecdda9d524d811ada07bab0ed4a4f01a04d1aa9aef58c6f906232706da90ef1365735359fcdf371a1b27b1805f7adeb435087a7cfe31e86adebce303d0211c96
 MISC metadata.xml 401 SHA256 571b35ba37f69c6eed3261f22f5c5699b7f1e1b34246ef03116191efa8f97d1a SHA512 b93d8e243de1b6c93df4e57c9bcb4a95b792c99c84c854f21f62faa829c7c84e74cc7ca319fba65f7116dd1d0548ae9d7fac7b00f46c29541be1e619c9ffe00f WHIRLPOOL 6044a37b095f6f9275b1952c10d728c2e9d2b30c24e2090cb3241f32859c8feb3f4c74d8f0fd878833996f9a7a54c7e50297f298275937ba9e00bbc39eb11331
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlTvK6EACgkQso7CE7gHKw3h2ACghu7yC5XbGYo8+adfBeQnJSts
+u+cAoNVEzT+9akIDcKTPS3/WpkX6LimU
+=CJlQ
+-----END PGP SIGNATURE-----
