@@ -11,25 +11,14 @@ DIST mypaint-1.0.0.tar.bz2 36748957 SHA256 ced440ec0307e29bfe4f612604fe27ec9bfae
 DIST mypaint-1.1.0.tar.bz2 37416388 SHA256 780d57e50dd90afd586873bc5120261930ea4c309d4d0958020916932122e838 SHA512 a3eef378ddcaa0a33f9afc49cc587489ecfff6f3e46e2238aab83f89d682f2407e2760e6029eaac3591f0a8955c95280c12839adcb42ec452cefbcdb142ab9b9 WHIRLPOOL bfd7356ad393dd85b91ccc010b5d0be23a6d82a33866edade0ef6eb739a1cbdb6823d7bffbdc943f96cdac9059abb7ac1edacf31d4ac2cd3871444594e23557a
 EBUILD mypaint-1.0.0-r1.ebuild 1751 SHA256 fb47ae52970e6efd88bd99e9c1d7d0f2f290a012874840a62df85529647270a5 SHA512 36a3efd6e4eea48cce9b474418134ec844d4854d9cc19798e6284d356b655d01f8eaadbb24296ca9b6b64c6241411ce19d6c00421a820f81103de1eb4a5a477e WHIRLPOOL c22818d99aa54bca811531dd20726aafc597acb4512c742bb0481ba7fca662fa9fe16d725f88ea3ed6c485f9b9a24aa125b7799da1ec1e0515cfe37b59ebc107
 EBUILD mypaint-1.1.0-r1.ebuild 2016 SHA256 843b1345926ce8061f873a4cdbfa1a88bcce675e96266e59a9db9d0d0d707977 SHA512 f448b5f6fa7f84873f9c625c6e7997ef6330a8186f499c3950124e450762338418cfcab40756fab28353fa74400c7f244f60acc69db8b29f51295b43fb3d9a40 WHIRLPOOL 39ac18687bb50091fc1742a1e0194cbd4a42c10fd0a2df4e79ae12c5c76aa290abe0a40bb91e27a85bb98e9ac866c61e05832addd0141235fb121b2b534fab83
+EBUILD mypaint-1.1.0-r2.ebuild 2094 SHA256 a1b83aa190bfd04613155a2b09549ca3c2e705a96aed55700d15ef728a53bee8 SHA512 6608430593ee8a0876960d52e65f85523b2aca87898a08f2e1793830357d96ec0ad18e9450257dc963979cb1ae4d0ea9b4a4bc62d998e3268eeff4f7a5b67f8f WHIRLPOOL ca4eff057962997ef8e24e2cb4e5f51470c774c1ffb98b8162d31b0aa95c0cd6267d59369d8813ff6c7c5442d24516faca839148cc55608965ebf823818f133a
 EBUILD mypaint-1.1.0.ebuild 1912 SHA256 de00678d99ef82a6402936255b1d9eed93107374d71ec5a7f0563604689e2f38 SHA512 a83a4e943b25daee3e727d480e4e241ca8aabe211bb472946ec47a474989373ca72e9297e7bfbac475277fb25ca9defa8f0f1a3f82a9b0b7ffb6102868556c52 WHIRLPOOL e60aa3cfff5a845297a090b4dc000fe8fd1f5dc1e0f1a272c60c80eb34c1628f74e2de0f2ba3bf95d2ae18f2ad9b42c9fa4669f47d4391cc097450ce17116ac2
-MISC ChangeLog 3956 SHA256 68eaca07f1e54e469f08e189495421c64690cdd3b3924f4f7f137ce48a86ec85 SHA512 7ec812e0aa8bc0664c19cb36bb8dcd60bce83f7de6e7e0be1d240b93629b5c95f18d744a8ad51b147eed17e476502f8a2ec9be4dce6077999ee4ead781301e74 WHIRLPOOL 0144dd3aeda8f5e0ec9bacb3747b1bf5861d4615691712e7b35ea6ebfce4ad4da73e2718b9625578917620142dd504917bf9cf8f867b51a704d9f97aa6ea1019
+MISC ChangeLog 4153 SHA256 5fbb0963a95daa50c2408d9069122384d22e9ac736114839a22b450b36f35a70 SHA512 821e12315221097bbd97128e019f3d6173a41b99d3f16bf4f8142d7b91eb32de758fd891341553b587676c14f9fba2b558d1183a18a3a52f3f937cdff9df7cbd WHIRLPOOL 972056e25a5a827dde380572256879d65c997e2789177ed74240a13d713dd7d88f82105fb616eaabc3574c2bc341fb1f71e5c447ff8f741009eb4e3de77cda1c
 MISC metadata.xml 278 SHA256 07a0afc4dfc12865b213ef6815169e0524357989b213ac40bc9436dea94c3160 SHA512 c47ad7b85f6516eec5bc86f26785d8731544436f25fce07093a7c51de184ddfeca02253022c54fb88c1b75645350d8d23de7fc1d8c62e8050e1288b4d6ebaba6 WHIRLPOOL 5fc748443c6e622808acfb4f906cc41bac88b04718771a678462d1079185b74de2840d3dfe1c0949ad96c5b8d2a278f7587af8b1381cddf72c92b9b3099b40c8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJSWGgsXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88rc8P/2pqyrMUGVl91O3bWnySwm39
-keT/MgpDqD9Oi9uCCdv4krEQ40hdXdBnEx+iNj3Ibpsc5ZxoZcrpqaaG9BlgA85U
-qDIVM1R18M+zoMYiZalBL5Ip30PWIiLH/Div8xux0LIfSn1LbAZPlWhfQtt1inAW
-5O6t10BqPT0DJ3lC13X7V2SxVDtb5cfK45SPveFvRLNqK7WxP5nvlmd2zvUsbTdb
-zpXvCQbYcqNcnpPUCovMsYyZMaW99IZZTwzkklwFLjG6xfOdtFZ4lSHTQb9Tdnl0
-0dbhmpMTsAdAwDnh4E3DT9vunligzHA+oeT58tYUhUiSr/JcFM9RrIsOauNgarfY
-jqL1TIO+gYuCWmAzLgUZt7J6ELEEQ2RPMfrERTRLHizMBxrIje3UNgJwK8sgwGmK
-CDRkKi8wiMfAPeeGZ4qnFvCs727ZzyaeeQUvTH09O0OCxnlPOKtKVXdfpGYR4jN0
-7SERZN0WkJHRW4JPvYGI6P4sE/maEcU8LoAhGkA94KWU8OLRoOdMhllZSFsp2f9U
-7MNU0BTJ45nkgxxbbzAbMGWlBs0ur8JClPHJ2VYKUjictpg28+rW2Hr5fKaKOBrI
-e9KjyqQ88Xw98N5yqIDvq2z0oWyLnaLj4lw5qKePi4BeTt1y+av4oAhQUg0RplAm
-Q7Jw5zeEe9IqFgChEhYR
-=Ch+W
+iEYEAREIAAYFAlTvLRoACgkQso7CE7gHKw0pcwCfVUD72RQf4KCQYxpj6Pb8xTvt
+L1UAoMJ18HWMkqlNDA+EnbrxJoQEm3Q9
+=drh3
 -----END PGP SIGNATURE-----
