@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/mypaint
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/mypaint/ChangeLog,v 1.23 2013/10/11 21:07:13 hwoarang Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/mypaint/ChangeLog,v 1.24 2015/02/26 14:26:18 idella4 Exp $
+
+*mypaint-1.1.0-r2 (26 Feb 2015)
+
+  26 Feb 2015; Ian Delaney <idella4@gentoo.org> +mypaint-1.1.0-r2.ebuild:
+  revbump; convert -> python-single-r1 and upgrade EAPI, consent by maintainer
+  hwoarang
 
 *mypaint-1.1.0-r1 (11 Oct 2013)
 
