@@ -1,6 +1,12 @@
 # ChangeLog for app-text/chm2pdf
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/chm2pdf/ChangeLog,v 1.14 2014/08/06 07:09:32 patrick Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/chm2pdf/ChangeLog,v 1.15 2015/02/26 14:19:59 idella4 Exp $
+
+*chm2pdf-0.9.1-r2 (26 Feb 2015)
+
+  26 Feb 2015; Ian Delaney <idella4@gentoo.org> +chm2pdf-0.9.1-r2.ebuild:
+  revbump; convert -> python-single-r1 and upgrade EAPI, consent by maintainer
+  hwoarang
 
   06 Aug 2014; Patrick Lauer <patrick@gentoo.org> chm2pdf-0.9.1-r1.ebuild,
   chm2pdf-0.9.1.ebuild:
